[tool.poetry]
name = "mean-shift"
version = "0.1.0"
description = "Tool used for mean shift clustering"
authors = ["Yufei Zhu <yufeizhu@kth.se>"]

[tool.poetry.dependencies]
python = "3.8"
PyYAML = "5.4.1"
click = "8.0.1"
numpy = "1.21.5"
matplotlib = "3.5.1"
scikit-learn = "1.0.1"
joblib = "1.1.0"

[tool.poetry.dev-dependencies]
mypy = "0.930"
pytest = "6.2.5"
pylint = "2.12.2"

[tool.pylint.master]
max-line-length = 100

[tool.pylint.messages_control]
disable = "too-many-arguments, missing-docstring"

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
